--- a/jupyter/templates/spark/spark_template.ipynb
+++ b/jupyter/templates/spark/spark_template.ipynb
@@ -2,13 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "cd732dd7-5b6e-4821-bcb7-5f455d9879af",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
-    "JUPYTER_DIR = \"/jupyter\"\n",
-    "execfile(\"/jupyter/scripts/__init__.py\", globals(), locals())"
+    "import os\n",
+    "JUPYTER_DIR = \"/opt/jupyter\"\n",
+    "\n",
+    "execfile(os.path.join(JUPYTER_DIR, \"scripts/__init__.py\"), globals(), locals())"
    ]
   },
   {
@@ -36,7 +42,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
