--- a/jupyter/templates/spark/spark_template.ipynb
+++ b/jupyter/templates/spark/spark_template.ipynb
@@ -14,7 +14,9 @@
     "import os\n",
     "JUPYTER_DIR = \"/opt/jupyter\"\n",
     "\n",
-    "execfile(os.path.join(JUPYTER_DIR, \"scripts/__init__.py\"), globals(), locals())"
+    "execfile(os.path.join(JUPYTER_DIR, \"scripts/__init__.py\"), globals(), locals())\n",
+    "\n",
+    "spark"
    ]
   },
   {
